# veldrid-spirv

./: CMakeLists.txt  Directory.Build.props  README.md  build-native.cmd  build-native.sh
.github/workflows/: build.yml
src/Veldrid.SPIRV/: Bool32.cs  CompilationResult.cs  CrossCompileOptions.cs  CrossCompileTarget.cs  GlslCompileInfo.cs  GlslCompileOptions.cs  InteropArray.cs  MacroDefinition.cs  NativeMacroDefinition.cs  ResourceFactoryExtensions.cs  SpirvCompilation.cs  SpirvCompilationException.cs  SpirvReflection.cs  Util.cs  Veldrid.SPIRV.csproj  VeldridSpirvNative.cs  VertexFragmentCompilationInfo.cs
src/Veldrid.SPIRV.BuildTools/: Veldrid.SPIRV.BuildTools.csproj
src/Veldrid.SPIRV.Tests/: CompilationTests.cs  ReflectionTests.cs  TestUtil.cs  Veldrid.SPIRV.Tests.csproj
src/Veldrid.SPIRV.VariantCompiler/: CompilationSet.cs  Program.cs  Veldrid.SPIRV.VariantCompiler.csproj
src/libveldrid-spirv/: InteropStructs.hpp  libveldrid-spirv.cpp
